--- a/.github/workflows/build_deploy.yml
+++ b/.github/workflows/build_deploy.yml
@@ -11,7 +11,7 @@ jobs:
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@4.1.1
+      uses: actions/checkout@v4.1.1
 
     - name: Setup Node.js environment
       uses: actions/setup-node@v3.8.1
