--- a/.github/workflows/build_deploy.yml
+++ b/.github/workflows/build_deploy.yml
@@ -40,10 +40,10 @@ jobs:
     - name: SSH Deploy
       uses: appleboy/ssh-action@v1.0.0
       with:
-        host: ${{ secret.SERVER_HOST }}
-        username: ${{ secret.SERVER_USERNAME }}
-        key: ${{ secret.SSH_PRIVATE_KEY }}
-        passphrase: ${{ secret.SSH_PASSPHRASE }}
+        host: ${{ secrets.SERVER_HOST }}
+        username: ${{ secrets.SERVER_USERNAME }}
+        key: ${{ secrets.SSH_PRIVATE_KEY }}
+        passphrase: ${{ secrets.SSH_PASSPHRASE }}
         script: |
           sudo docker stop pigeoner-react
           sudo docker rm pigeoner-react
